cambios en estilos.css con responsive y los elementos de bootstrap

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -113,55 +113,50 @@ html {margin: 0;
              height: 5vh;
             font-family: Arial, Helvetica, sans-serif;}
     
-    .contenedorPrincipal{margin-left: 10%;
-                        width: 75%;
-                        margin-top: 1%;
-                        color: whitesmoke;
-                        display: flex;
-                        flex-wrap: wrap;
-                        justify-content: center;
-                        font-size: 90%;}
+    .container {margin-top: 1%;}
     
-    .contenedorPrincipal h2 {text-align: center;}
-    
-    .intro {width: 45%;
-        margin-left: 2%;
-    color: whitesmoke;}
     
     .intro img {width: 100%;
         border-color: whitesmoke;
         border: solid;
-        border-radius: 1rem;}
-    
-    .intro h1 {text-align: center;}
-    
-    .intro h2 {text-align: center;}
-    
-    .intro h3 {text-align: center;}
-    
-    .intro a {text-decoration: none;
+        border-radius: 1rem;
+        color: whitesmoke;}
+
+    .row {margin-top: 2%;}
+
+    .col-xl-6 {color: antiquewhite;
+                text-align: center;}
+
+    .col-xl-6 h2 {text-align: center;
+                  color: antiquewhite;
+                  font-size: 2rem;}
+
+    .col-xl-6 a {text-decoration: none;
                color:whitesmoke;}
     
-    .intro a:hover{color: green;}
-    
+    .col-xl-6 a:hover{color: green;}
+
+ 
     .contenedorMenu {margin-left: 10%;
                      width: 75%;
                     margin-top: 1%;
-                    display: flex;
-                    flex-wrap:wrap;
-                    justify-content: center;
                     color: antiquewhite;}
-    
-    .contenedorMenu p {margin-left: 5%;}
-    
-    .contenedorComida {width: 30%;
-                        margin-left: 1%;
-                        margin-top: 3%;}
-        
-    .contenedorComida img {width: 100%;
-                             border-radius: 1rem;
-                             border-color: whitesmoke;
-                            border: solid;}
+
+    .contenedorMenu p {margin-top: 2%;}
+
+    .contenedorMenu h3 {margin-top: 5%;}
+
+    .especiales {margin-top: 5%;}
+
+    .cards {margin-top: 2%;}
+
+    .card-title {color: black;}
+
+    .card-text {color: black;}
+
+    .objetivo p {margin-top: 5%;}
+
+    .video p {margin-top: 5%;}
     
     .contenedorComida h4 {text-align: left;
                          margin-left: 3%;}
@@ -224,8 +219,8 @@ html {margin: 0;
         flex-direction: column;
         font-size: 90%;}
     
-    .sucursales iframe {width: 45%;
-                height: 40vh;
+    .sucursales iframe {width: 60%;
+                height: 55vh;
                 padding: 2%;
                 display: inline-block;
                 }
@@ -246,7 +241,6 @@ html {margin: 0;
     .sucursalInfo h2 {text-align: center;}
                     
     footer{width: 100%;
-    margin-top: 5%;
     background-image: url(../assets/imagen/footer_background.png);
     display: flex;
     flex-direction: column;
@@ -257,16 +251,7 @@ html {margin: 0;
             opacity: 0.8;
     padding-top: 2%;}
     
-    .sponsors {display: flex;
-              justify-content:center;
-              width: 100%;}
-    
-    .sponsors ul {display: flex;
-                 justify-content: center;
-                margin-left: 10%;
-                list-style-type: none;}
-    
-    .sponsors img {width: 50%;}
+    .sponsors img {width: 80%;}
     
     .iconBox {margin-top: 2%;
     display: flex;
@@ -281,8 +266,8 @@ html {margin: 0;
     footer h5 {text-align: center;
                color: whitesmoke;
             margin-top: 5%;}
-    
-    
+
+
     @media screen and (min-width:0px) and (max-width: 768px) {
     
     header {display: flex;
@@ -317,17 +302,11 @@ html {margin: 0;
                 flex-direction: column;
                 justify-content: center;
                 font-size: 90%;}
-    
-    .intro {width: 80%;
-            margin-left: 2%;
-            color: whitesmoke;
-            text-align: center;
-            }
-                
-    .intro img {width: 100%;
-                    border-color: whitesmoke;
-                    border: solid;
-                    border-radius: 1rem;}
+
+    .row {margin-top: 5%;}
+
+    .introMenu {display: flex;
+                flex-direction: column-reverse;}
     
     .comidasPrincipal {display: flex;
                         flex-direction: column;
@@ -352,23 +331,68 @@ html {margin: 0;
                     border-radius: 1rem;
                 margin-top: 10%;}
     
-    .contenedorMenu {width: 100%;
-                    margin-left: 0%;
-                    display: flex;
-                    flex-direction: column;
-                    align-items: center;}
+    .contenedorMenu {margin-left: 10%;
+                     width: 80%;
+                    margin-top: 1%;
+                    color: antiquewhite;}
     
     .contenedorComida {width: 80%;
                        display: flex;}
     
     .contenedorComida img {width: 40%;}
+
+    .contenedorPrincipal {margin-left: 5%;}
+
+    .contenedorSucursales {margin-left: 10%;
+        width: 80%;
+        margin-top: 1%;
+        color: whitesmoke;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        flex-direction: column;
+        font-size: 90%;}
+
+            
+    .sucursalInfo {width: 80%;
+        padding: 5%;
+     height: 30vh;}
+
+    .sucursales iframe {width: 90%;
+                height: 40vh;
+                padding: 5%;
+                display: inline-block;
+                margin-top: 20%;
+                }
     
-    .sponsors ul {margin: 0%;}
-    
-    .sponsors img {width: 80%;}
+    .sucursales{width: 100%;
+                display: flex;
+                flex-direction: column;
+                margin-top: 5%;}
+
+    .objetivo {margin-top: 10%;}
+
+    .objetivo h2 {color:green;
+                  font-weight: bold;}
+
+    .objetivo p {margin-top: 2%;}
+
+    .video h2 {color:green;
+        font-weight: bold;}
+
+    .video {display: flex;
+        flex-direction: column-reverse;} 
+        
+    .video p {margin-top: 2%;}
+
+    .video iframe {height: 40vh;}
+
+    .socialPages {margin-top: 5%;}
+
+    footer h3 {font-size: 1.5rem;}
+
+    footer h5 {font-size: 0.5rem;}
     
     }
-    
-    
     
     
