--- a/css/estilos.css
+++ b/css/estilos.css
@@ -52,8 +52,7 @@ html {margin: 0;
         padding: 0%;
         margin: 0;
         background-image: url(../assets/imagen/nosotros_background.jpg);
-        background-size: cover;
-    margin-top: 2%;}
+        background-size: cover;}
     
     .imagenRegistrate{width: 100%;
         height: 60vh;
@@ -61,7 +60,6 @@ html {margin: 0;
         margin: 0;
         background-image: url(../assets/imagen/registro_principal.png);
         background-size: cover;
-    margin-top: 2%;
     display: flex;
     justify-content: flex-end;}
     
@@ -70,8 +68,7 @@ html {margin: 0;
         padding: 0%;
         margin: 0;
         background-image: url(../assets/imagen/sucursales_background.jpg);
-        background-size: cover;
-    margin-top: 2%;}
+        background-size: cover;}
     
     .imagenMenu{width: 100%;
         height: 60vh;
@@ -81,7 +78,7 @@ html {margin: 0;
         background-size: cover;}
     
     .registrateContenedor{
-        width: 25%;
+        width: 50%;
         text-align: center;
         font-size: 80%;
         padding-right: 20%;
@@ -211,15 +208,12 @@ html {margin: 0;
     .contenedorSucursales {margin-left: 10%;
         width: 75%;
         margin-top: 1%;
-        color: whitesmoke;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        flex-direction: column;
-        font-size: 90%;}
+        color: whitesmoke;}
+
+    .contenedorSucursales p {font-size: 1rem;}
+
     
-    .sucursales iframe {width: 60%;
-                height: 55vh;
+    .sucursales iframe {height: 55vh;
                 padding: 2%;
                 display: inline-block;
                 }
@@ -230,14 +224,20 @@ html {margin: 0;
                 border-radius: 1rem;
                 backdrop-filter: blur(12px);
                 color: whitesmoke;
-                display: flex;
                 margin-top: 2%;}
+
+    .sucursalInfo {margin-top: 5%;}
+
+    .sucursalInfo h6 {text-decoration: underline;}
+
+    .sucursalInfo p {font-size: 0.9rem;}
     
-    .sucursalInfo{width: 45%;
-             padding: 2%;
-          height: 30vh;}
+    .sucursal {padding: 2%;
+              text-align: left;
+              display: flex;
+              flex-direction: column;}
     
-    .sucursalInfo h2 {text-align: center;}
+    .sucursal h2 {text-align: center;}
                     
     footer{width: 100%;
     background-image: url(../assets/imagen/footer_background.png);
@@ -302,6 +302,8 @@ html {margin: 0;
                 justify-content: center;
                 font-size: 90%;}
 
+    main h1 {text-align: center;}
+
     .row {margin-top: 5%;}
 
     .introMenu {display: flex;
@@ -352,16 +354,13 @@ html {margin: 0;
         flex-direction: column;
         font-size: 90%;}
 
-            
-    .sucursalInfo {width: 80%;
-        padding: 5%;
-     height: 30vh;}
+    .sucursal {padding: 5%;
+               text-align: center;
+     }
 
-    .sucursales iframe {width: 90%;
+    .sucursales iframe {width: 100%;
                 height: 40vh;
                 padding: 5%;
-                display: inline-block;
-                margin-top: 20%;
                 }
     
     .sucursales{width: 100%;
@@ -385,6 +384,31 @@ html {margin: 0;
     .video p {margin-top: 2%;}
 
     .video iframe {height: 40vh;}
+
+    .imagenRegistrate {height: 75vh}
+
+    .registrateContenedor{
+        text-align: center;
+        backdrop-filter: blur(15px);
+         width: 100%;
+        padding: 5%;
+    color:yellowgreen;}
+
+    .registrateContenedor h2 {color: darkgreen;}
+
+    
+    .registrateContenedor p {color:green;
+                             font-size: 1rem;
+                             font-weight: 500;}
+
+    .beneficiosRegistroContenedor {margin-top: 2%;
+                                   width: 80%;
+                                   margin-left: 10%;}
+    
+    .beneficiosRegistroContenedor h3 {padding: 2%;
+                                      text-align: center;}
+    
+    .beneficiosRegistroContenedor p {margin-left: 3%;}
 
     .socialPages {margin-top: 5%;}
 
