Primer intento con Sass

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,632 +1,120 @@
-html {
-    margin: 0;
-    padding: 0%;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
 body {
-    background-color: black;
-    padding: 0%;
-    margin: 0%;
+  background-color: black;
+  padding: 0%;
+  margin: 0%;
 }
 
 header {
-    position: sticky;
-    z-index: 200;
-    top: 0%;
-    background-color: black;
-    display: flex;
-    justify-content: space-evenly;
+  position: sticky;
+  z-index: 200;
+  top: 0%;
+  background-color: black;
+  display: flex;
+  justify-content: space-evenly;
 }
-
-.logo {
-    width: 10%;
-    padding: 1% 0%;
+header .logo {
+  width: 10%;
+  padding: 1% 0%;
 }
-
-.logo img {
-    width: 100%;
-    display: flex;
+header .logo img {
+  width: 100%;
+  display: flex;
 }
-
-nav {
-    width: 40%;
+header nav {
+  width: 40%;
 }
-
-
-nav ul {
-    display: flex;
-    padding-top: 5%;
-    list-style-type: none;
+header nav ul {
+  display: flex;
+  padding-top: 5%;
+  list-style-type: none;
 }
-
-nav li {
-    padding: 0% 5%;
+header nav ul li {
+  padding: 0% 5%;
 }
-
-nav a {
-    text-decoration: none;
-    font-family: Arial, Helvetica, sans-serif;
-    color: antiquewhite;
-    font-size: 1rem;
-    font-weight: bold;
+header nav ul li a {
+  text-decoration: none;
+  font-family: Arial, Helvetica, sans-serif;
+  color: antiquewhite;
+  font-size: 1rem;
+  font-weight: bold;
 }
-
-nav a:hover {
-    color: green;
+header nav ul li a:hover {
+  color: green;
 }
 
 main {
-    width: 100%;
-    background-image: url(../assets/imagen/background.png);
-    background-attachment: fixed;
-    padding-top: 0%;
-    padding-bottom: 2%;
+  width: 100%;
+  background-image: url(../assets/imagen/background.png);
+  background-attachment: fixed;
+  padding-top: 0%;
+  padding-bottom: 2%;
 }
-
-.imagenPrincipal img {
-    width: 100%;
-    height: 60vh;
+main .imagenPrincipal img {
+  width: 100%;
+  height: 60vh;
 }
-
-.imagenNosotros {
-    width: 100%;
-    height: 60vh;
-    padding: 0%;
-    margin: 0;
-    background-image: url(../assets/imagen/nosotros_background.jpg);
-    background-size: cover;
+main .container {
+  margin-top: 1%;
 }
-
-.imagenRegistrate {
-    width: 100%;
-    height: 60vh;
-    padding: 0%;
-    margin: 0;
-    background-image: url(../assets/imagen/registro_principal.png);
-    background-size: cover;
-    display: flex;
-    justify-content: flex-end;
+main .container .row {
+  margin-top: 2%;
 }
-
-.imagenSucursales {
-    width: 100%;
-    height: 60vh;
-    padding: 0%;
-    margin: 0;
-    background-image: url(../assets/imagen/sucursales_background.jpg);
-    background-size: cover;
+main .container .intro img {
+  width: 100%;
+  border-color: whitesmoke;
+  border: solid;
+  border-radius: 1rem;
+  color: whitesmoke;
 }
-
-.imagenMenu {
-    width: 100%;
-    height: 60vh;
-    padding: 0%;
-    margin: 0;
-    background-image: url(../assets/imagen/menu_principal.jpeg);
-    background-size: cover;
+main .container .col-xl-6 {
+  color: antiquewhite;
+  text-align: center;
 }
-
-.registrateContenedor {
-    width: 50%;
-    text-align: center;
-    font-size: 80%;
-    padding-right: 20%;
+main .container .col-xl-6 h2 {
+  text-align: center;
+  color: antiquewhite;
+  font-size: 2rem;
 }
-
-.beneficiosRegistroContenedor {
-    margin-top: 2%;
-    color: whitesmoke;
-    margin-left: 15%;
-    width: 65%;
-    backdrop-filter: blur(12px);
-    border-radius: 1rem;
+main .container .col-xl-6 a {
+  text-decoration: none;
+  color: whitesmoke;
 }
-
-.beneficiosRegistroContenedor h3 {
-    padding: 2%;
-}
-
-.beneficiosRegistroContenedor p {
-    margin-left: 3%;
-}
-
-.listaBeneficios {
-    margin-left: 3%;
-}
-
-form {
-    font-weight: bold;
-    margin-top: 10%;
-}
-
-input {
-    width: 75%;
-    border-radius: 0.2rem;
-    height: 3vh;
-    margin-top: 2%;
-}
-
-.submit {
-    width: 30%;
-    height: 5vh;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-.container {
-    margin-top: 1%;
-}
-
-
-.intro img {
-    width: 100%;
-    border-color: whitesmoke;
-    border: solid;
-    border-radius: 1rem;
-    color: whitesmoke;
-}
-
-.row {
-    margin-top: 2%;
-}
-
-.col-xl-6 {
-    color: antiquewhite;
-    text-align: center;
-}
-
-.col-xl-6 h2 {
-    text-align: center;
-    color: antiquewhite;
-    font-size: 2rem;
-}
-
-.col-xl-6 a {
-    text-decoration: none;
-    color: whitesmoke;
-}
-
-.col-xl-6 a:hover {
-    color: green;
-}
-
-
-.contenedorMenu {
-    margin-left: 10%;
-    width: 75%;
-    margin-top: 1%;
-    color: antiquewhite;
-}
-
-.contenedorMenu p {
-    margin-top: 2%;
-}
-
-.contenedorMenu h3 {
-    margin-top: 5%;
-}
-
-.especiales {
-    margin-top: 5%;
-}
-
-.cards {
-    margin-top: 2%;
-}
-
-.card-prize {
-    color: darkgreen;
-}
-
-.card-title {
-    color: black;
-}
-
-.card-text {
-    color: black;
-}
-
-.objetivo p {
-    margin-top: 5%;
-}
-
-.video p {
-    margin-top: 5%;
-}
-
-.contenedorComida h4 {
-    text-align: left;
-    margin-left: 3%;
-}
-
-
-.infoComida {
-    width: 100%;
-    backdrop-filter: blur(12px);
-    border: solid;
-    border-radius: 1rem;
-    border-color: white;
-    text-align: center;
-}
-
-.infoComida p {
-    padding: 3%;
-    font-size: 0.9rem;
-}
-
-.comidasPrincipal {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-}
-
-.comidas {
-    width: 45%;
-    margin-left: 2%;
-    color: whitesmoke;
-}
-
-.comidas h2 {
-    text-align: center;
-}
-
-.comidas h3 a:hover {
-    color: green;
-}
-
-.comidasImagen {
-    width: 45%;
-    margin-left: 2%;
-    color: whitesmoke;
-}
-
-.comidasImagen img {
-    width: 100%;
-    border-color: whitesmoke;
-    border: solid;
-    border-radius: 1rem;
-}
-
-.comidas p {
-    font-size: 90%;
-    text-align: right;
-}
-
-.comidas h3 {
-    text-align: center;
-}
-
-.comidas a {
-    text-decoration: none;
-    color: whitesmoke;
-}
-
-.comidas video {
-    width: 100%;
-}
-
-iframe {
-    width: 100%;
-    height: 40vh;
-    border-color: whitesmoke;
-    border: solid;
-    border-radius: 1rem;
-}
-
-.contenedorSucursales {
-    margin-left: 10%;
-    width: 75%;
-    margin-top: 1%;
-    color: whitesmoke;
-}
-
-.contenedorSucursales p {
-    font-size: 1rem;
-}
-
-
-.sucursales iframe {
-    height: 55vh;
-    padding: 2%;
-    display: inline-block;
-}
-
-.sucursales {
-    width: 100%;
-    border: solid;
-    border-color: whitesmoke;
-    border-radius: 1rem;
-    backdrop-filter: blur(12px);
-    color: whitesmoke;
-    margin-top: 2%;
-}
-
-.sucursalInfo {
-    margin-top: 5%;
-}
-
-.sucursalInfo h6 {
-    text-decoration: underline;
-}
-
-.sucursalInfo p {
-    font-size: 0.9rem;
-}
-
-.sucursal {
-    padding: 2%;
-    text-align: left;
-    display: flex;
-    flex-direction: column;
-}
-
-.sucursal h2 {
-    text-align: center;
+main .container .col-xl-6 a:hover {
+  color: green;
 }
 
 footer {
-    width: 100%;
-    background-image: url(../assets/imagen/footer_background.png);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  width: 100%;
+  background-image: url(../assets/imagen/footer_background.png);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
-
 footer h3 {
-    color: white;
-    text-align: center;
-    opacity: 0.8;
-    padding-top: 2%;
+  color: white;
+  text-align: center;
+  opacity: 0.8;
+  padding-top: 2%;
 }
-
-.sponsors img {
-    width: 80%;
+footer .sponsors img {
+  width: 80%;
 }
-
-.iconBox {
-    margin-top: 2%;
-    display: flex;
-    justify-content: center;
+footer .iconBox {
+  margin-top: 2%;
+  display: flex;
+  justify-content: center;
 }
-
-.iconBox a {
-    padding: 0% 2%;
+footer .iconBox a {
+  padding: 0% 2%;
 }
-
-.socialIcons {
-    color: antiquewhite;
-    text-decoration: none;
+footer .iconBox a .socialIcons {
+  color: antiquewhite;
+  text-decoration: none;
 }
-
 footer h5 {
-    text-align: center;
-    color: whitesmoke;
-    margin-top: 5%;
+  text-align: center;
+  color: whitesmoke;
+  margin-top: 5%;
 }
 
-
-@media screen and (min-width:0px) and (max-width: 768px) {
-
-    header {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: 100%;
-        position: relative;
-    }
-
-    .logo {
-        width: 50%;
-        padding: 1% 0%;
-    }
-
-    .logo img {
-        width: 100%;
-    }
-
-    nav {
-        width: 100%;
-    }
-
-
-    nav ul {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        padding-top: 5%;
-        list-style-type: none;
-    }
-
-    nav li {
-        padding: 5% 0%;
-        text-align: center;
-    }
-
-    .contenedorPrincipal {
-        width: 90%;
-        margin-top: 1%;
-        color: whitesmoke;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        font-size: 90%;
-    }
-
-    main h1 {
-        text-align: center;
-    }
-
-    .row {
-        margin-top: 5%;
-    }
-
-    .introMenu {
-        display: flex;
-        flex-direction: column-reverse;
-    }
-
-    .comidasPrincipal {
-        display: flex;
-        flex-direction: column;
-        flex-direction: column-reverse;
-    }
-
-    .comidas {
-        width: 80%;
-        margin-left: 2%;
-        color: whitesmoke;
-        text-align: center;
-    }
-
-    .comidas p {
-        text-align: center;
-        font-size: 90%;
-    }
-
-
-    .comidasImagen {
-        width: 80%;
-        margin-left: 2%;
-        color: whitesmoke;
-    }
-
-    .comidasImagen img {
-        width: 100%;
-        border-color: whitesmoke;
-        border: solid;
-        border-radius: 1rem;
-        margin-top: 10%;
-    }
-
-    .contenedorMenu {
-        margin-left: 10%;
-        width: 80%;
-        margin-top: 1%;
-        color: antiquewhite;
-    }
-
-    .contenedorComida {
-        width: 80%;
-        display: flex;
-    }
-
-    .contenedorComida img {
-        width: 40%;
-    }
-
-    .contenedorPrincipal {
-        margin-left: 5%;
-    }
-
-    .contenedorSucursales {
-        margin-left: 10%;
-        width: 80%;
-        margin-top: 1%;
-        color: whitesmoke;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        flex-direction: column;
-        font-size: 90%;
-    }
-
-    .sucursal {
-        padding: 5%;
-        text-align: center;
-    }
-
-    .sucursales iframe {
-        width: 100%;
-        height: 40vh;
-        padding: 5%;
-    }
-
-    .sucursales {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        margin-top: 5%;
-    }
-
-    .objetivo {
-        margin-top: 10%;
-    }
-
-    .objetivo h2 {
-        color: green;
-        font-weight: bold;
-    }
-
-    .objetivo p {
-        margin-top: 2%;
-    }
-
-    .video h2 {
-        color: green;
-        font-weight: bold;
-    }
-
-    .video {
-        display: flex;
-        flex-direction: column-reverse;
-    }
-
-    .video p {
-        margin-top: 2%;
-    }
-
-    .video iframe {
-        height: 40vh;
-    }
-
-    .imagenRegistrate {
-        height: 75vh
-    }
-
-    .registrateContenedor {
-        text-align: center;
-        backdrop-filter: blur(15px);
-        width: 100%;
-        padding: 5%;
-        color: yellowgreen;
-    }
-
-    .registrateContenedor h2 {
-        color: darkgreen;
-    }
-
-
-    .registrateContenedor p {
-        color: green;
-        font-size: 1rem;
-        font-weight: 500;
-    }
-
-    .beneficiosRegistroContenedor {
-        margin-top: 2%;
-        width: 80%;
-        margin-left: 10%;
-    }
-
-    .beneficiosRegistroContenedor h3 {
-        padding: 2%;
-        text-align: center;
-    }
-
-    .beneficiosRegistroContenedor p {
-        margin-left: 3%;
-    }
-
-    .socialPages {
-        margin-top: 5%;
-    }
-
-    footer h3 {
-        font-size: 1.5rem;
-    }
-
-    footer h5 {
-        font-size: 0.5rem;
-    }
-
-}
+/*# sourceMappingURL=estilos.css.map */
