--- a/css/estilos.css
+++ b/css/estilos.css
@@ -83,6 +83,35 @@ main .container .col-xl-6 a:hover {
   color: green;
 }
 
+.menu {
+  width: 100%;
+  background-attachment: fixed;
+  padding-top: 0%;
+  padding-bottom: 2%;
+}
+.menu img {
+  width: 100%;
+  height: 60vh;
+}
+.menu .contenedorMenu {
+  margin-left: 10%;
+  width: 75%;
+  margin-top: 1%;
+  color: antiquewhite;
+}
+.menu .contenedorMenu h3 {
+  margin-top: 5%;
+}
+.menu .contenedorMenu p {
+  margin-top: 2%;
+}
+.menu .contenedorMenu .especiales {
+  margin-top: 5%;
+}
+.menu .contenedorMenu .postres {
+  margin-top: 5%;
+}
+
 footer {
   width: 100%;
   background-image: url(../assets/imagen/footer_background.png);
