--- a/scss/_mainmenu.scss
+++ b/scss/_mainmenu.scss
@@ -1,20 +1,36 @@
 .menu {
     width: 100%;
-    background-image: url(../assets/imagen/background.png);
     background-attachment: fixed;
     padding-top: 0%;
     padding-bottom: 2%;
+
+    img {
+        width: 100%;
+        height: 60vh;
+    }
+
     .contenedorMenu {
         margin-left: 10%;
         width: 75%;
         margin-top: 1%;
         color: antiquewhite;
-    h3 {
-        margin-top: 5%;}
-    p {
-        margin-top: 2%;
+
+        h3 {
+            margin-top: 5%;
+        }
+
+        p {
+            margin-top: 2%;
+        }
+
+        .especiales {
+            margin-top: 5%;
+        }
+
+        .postres {
+            margin-top: 5%;
+        }
+
     }
-    
-}
 
 }
