--- a/scss/_mainintro.scss
+++ b/scss/_mainintro.scss
@@ -4,9 +4,11 @@ main {
     background-attachment: fixed;
     padding-top: 0%;
     padding-bottom: 2%;
-    .imagenPrincipal img {
+    .imagenPrincipal {
+        img {
         width: 100%;
         height: 60vh;
+         }
     }
 
     .container {
