--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -4,7 +4,13 @@ body {
     margin: 0%;
 }
 
+
+
+@import "variables.scss";
 @import "header.scss";
 @import "mainintro.scss";
 @import "mainmenu.scss";
+@import "mainnosotros.scss";
+@import "mainsucursales.scss";
+@import "mainregistrate.scss";
 @import "footer.scss";
